[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "XStream_utils"
version = "0.1.0"
description = "Utilities for extragalactic stream analysis: weighted corner plots and H-mean statistics."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["XStream_utils*"]
